--- a/image.html
+++ b/image.html
@@ -8,14 +8,18 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <a href="index.html">Home Page</a>
+    <a href="image.html">Images</a>
     <p class="intro">This is an introduction to our website. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque totam exercitationem veniam sed porro dolore soluta, ipsum, fugiat nulla minima, natus tenetur distinctio harum dolorum voluptatibus corrupti blanditiis tempora ut.</p>
-    <a>images/dubai.jpeg</a>
-    <a>images/banaffcanada.jpeg</a>
-    <a>images/effletower.jpeg</a>
-    <a>images/southisland.jpeg</a>
-    <a>images/stlucia.jpeg</a>
-    <a>images/victoriafalls.jpeg</a>
-    <a>images/zanzibar.jpeg</a>
-    <a>images/maldives.jpeg</a>
+    <a href="images/dubai.jpeg"> Dubai UAE</a>
+    <img src="images/banaffcanada.jpeg" alt="Banaff Canada">
+    <img src="images/dubai.jpeg" alt="Dubai UAE">
+    <img src="images/effeltower.jpeg" alt="Eiffel Tower France">
+    <img src="images/eiffeltower.jpeg" alt="Macho Pichu Peru">
+    <img src="images/maldives.jpeg" alt="Maldives Island">
+    <img src="images/southisland.jpeg" alt="South Island Newzealand">
+    <img src="images/stlucia.jpeg" alt="Stulcia Mexico">
+    <img src="images/victoriafalls.jpeg" alt="Victoria falls Mozambique">
+    <img src="images/zanzibar.jpeg" alt="Zanzibar Republic of Tanzania">
 </body>
 </html>
