--- a/index.html
+++ b/index.html
@@ -4,17 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Trails Travel Agency</title>
+    <title>Lets Groove!!!</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <a href="index.html">Home Page</a>
-    <a href="image.html">Images</a>
-    <p class="intro">This is an introduction to our website. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque totam exercitationem veniam sed porro dolore soluta, ipsum, fugiat nulla minima, natus tenetur distinctio harum dolorum voluptatibus corrupti blanditiis tempora ut.</p>
-    <p class="main">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, repudiandae maxime itaque molestiae nihil necessitatibus. Perspiciatis, eos. Ullam sapiente omnis placeat! Nesciunt odio itaque quas ad exercitationem optio repellendus voluptatum praesentium, maiores dolor nam corrupti harum nulla illum, ut atque, laborum consequuntur doloremque dicta quibusdam ipsum? Voluptatibus quo expedita molestiae placeat molestias tenetur consequatur dignissimos exercitationem repellendus, nulla sint aspernatur, esse iste officiis eveniet sapiente labore omnis ex adipisci recusandae. Quod temporibus quo molestias odit molestiae, accusantium pariatur consequuntur, explicabo esse nobis reiciendis, mollitia sed fugiat eum. Officiis nisi hic ea, ipsam quod doloremque possimus nulla cum est. Libero, eveniet! Maxime praesentium harum ipsam totam blanditiis, pariatur excepturi voluptate tenetur. Sint maiores a amet officiis saepe. Dicta laboriosam ipsum autem consequatur obcaecati dolore nesciunt ratione. Repudiandae fugit reiciendis accusantium porro illo tempore ipsa voluptatem velit recusandae obcaecati veniam tempora, explicabo repellat quibusdam omnis quo similique aut non. Esse incidunt voluptates maxime commodi dolores, veritatis iste recusandae aperiam labore libero delectus ex molestiae inventore, atque officia hic. Ad doloremque exercitationem quos earum sit accusantium placeat laborum commodi! Ullam necessitatibus temporibus id recusandae laudantium, qui omnis molestias itaque explicabo eaque non porro modi iusto repellendus laboriosam nisi maxime soluta amet? Numquam, vitae.</p>
-    <h1 class="intro">About Me</h1>
-    <p class="line1">This line will be aqua</p>
-    <p id="line2">This line will be aqua</p>
-    <img src="images/eiffeltower.jpeg" alt="southisland">
+    <h1>Groove Safaris</h1>
+    <p>Here a list to help you pick a cool Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque id earum quasi error quae esse asperiores nemo adipisci cupiditate aliquam perspiciatis hic nesciunt labore temporibus eligendi architecto alias, nisi vel.</p>
+    <ul>
+        <li>Zanzibar</li>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, magnam necessitatibus labore neque aliquid quaerat a ad quo minus voluptatum eligendi animi possimus consequatur doloribus doloremque ipsum qui in harum?</p>
+        <img src="images/zanzibar.jpeg" alt="Zanzibar Island">
+        <li>Victoria Falls</li>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laboriosam voluptatibus molestiae maxime minima? Illo quaerat facere eum quas blanditiis, reiciendis laudantium accusamus voluptatibus velit unde at fugit, obcaecati atque!</p>
+        <img src="images/victoriafalls.jpeg" alt="Victoria Falls">
+        <li>Maldives</li>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse eaque earum temporibus beatae cum tempore consectetur. Molestias laborum aspernatur fuga ad quod ea assumenda, iste consequatur repudiandae aperiam, dicta asperiores.</p>
+        <img src="images/maldives.jpeg" alt="Maldives Island">
+        <li>Stulcia</li>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit dignissimos nulla laborum illo rerum id, ipsa nesciunt eligendi ratione sint magni consequatur temporibus minima magnam unde quis error culpa consequuntur.</p>
+        <img src="images/stlucia.jpeg" alt="Stulcia">
+        <li>south Island</li>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur rerum nemo similique, cumque, corrupti perferendis ea voluptate maiores aperiam numquam nesciunt inventore ad iste quasi? Ratione veritatis quo incidunt dicta?</p>
+        <img src="images/southisland.jpeg" alt="South Island">
+        <li>Macho Picho</li>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quam laboriosam excepturi dolore harum ipsa! Accusantium, esse! Iusto magni quasi provident ab voluptate reprehenderit, delectus iure? Quo consequuntur quas vel!</p>
+        <img src="images/eiffeltower.jpeg" alt="">
+        <li>Eiffel Tower</li>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis eligendi tenetur ipsam illo dolore rerum minima atque facere! Odio, perspiciatis. Odio quasi consectetur animi praesentium sequi iste, dolor a veniam.</p>
+        <img src="images/effeltower.jpeg" alt="Eiffel Tower">
+        <li>Dubai</li>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore officiis quo quod consequatur illum deserunt saepe reiciendis dicta voluptatum repudiandae? Tempore voluptatum aliquid quis animi corporis qui dolores quia accusamus?</p>
+        <img src="images/dubai.jpeg" alt="">
+        <li>Banaff</li>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum corrupti iste rerum veritatis. Ut dolor rem, optio facere earum molestiae exercitationem. Quo cupiditate repudiandae possimus ratione minus aliquid labore commodi!</p>
+        <img src="images/banaffcanada.jpeg" alt="Banaff">
+    </ul>
 </body>
 </html>
