adding span and div elements

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <h1>Groove Safaris</h1>
     <p>Here a list to help you pick a cool Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque id earum quasi error quae esse asperiores nemo adipisci cupiditate aliquam perspiciatis hic nesciunt labore temporibus eligendi architecto alias, nisi vel.</p>
     <ul>
+        <div class="africa">
         <li>Zanzibar</li>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, magnam necessitatibus labore neque aliquid quaerat a ad quo minus voluptatum eligendi animi possimus consequatur doloribus doloremque ipsum qui in harum?</p>
         <img src="images/zanzibar.jpeg" alt="Zanzibar Island">
         <li>Victoria Falls</li>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laboriosam voluptatibus molestiae maxime minima? Illo quaerat facere eum quas blanditiis, reiciendis laudantium accusamus voluptatibus velit unde at fugit, obcaecati atque!</p>
-        <img src="images/victoriafalls.jpeg" alt="Victoria Falls">
+        <img src="images/victoriafalls.jpeg" alt="Victoria Falls"></div>
+        <div class="east">
         <li>Maldives</li>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse eaque earum temporibus beatae cum tempore consectetur. Molestias laborum aspernatur fuga ad quod ea assumenda, iste consequatur repudiandae aperiam, dicta asperiores.</p>
         <img src="images/maldives.jpeg" alt="Maldives Island">
@@ -25,7 +27,7 @@
         <img src="images/stlucia.jpeg" alt="Stulcia">
         <li>south Island</li>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur rerum nemo similique, cumque, corrupti perferendis ea voluptate maiores aperiam numquam nesciunt inventore ad iste quasi? Ratione veritatis quo incidunt dicta?</p>
-        <img src="images/southisland.jpeg" alt="South Island">
+        <img src="images/southisland.jpeg" alt="South Island"></div>
         <li>Macho Picho</li>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quam laboriosam excepturi dolore harum ipsa! Accusantium, esse! Iusto magni quasi provident ab voluptate reprehenderit, delectus iure? Quo consequuntur quas vel!</p>
         <img src="images/eiffeltower.jpeg" alt="">
@@ -33,7 +35,7 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis eligendi tenetur ipsam illo dolore rerum minima atque facere! Odio, perspiciatis. Odio quasi consectetur animi praesentium sequi iste, dolor a veniam.</p>
         <img src="images/effeltower.jpeg" alt="Eiffel Tower">
         <li>Dubai</li>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore officiis quo quod consequatur illum deserunt saepe reiciendis dicta voluptatum repudiandae? Tempore voluptatum aliquid quis animi corporis qui dolores quia accusamus?</p>
+        <p><span class="east">ipsum dolor sit amet consectetur</span> adipisicing elit. Labore officiis quo quod consequatur illum deserunt saepe reiciendis dicta voluptatum repudiandae? Tempore voluptatum aliquid quis animi corporis qui dolores quia accusamus?</p>
         <img src="images/dubai.jpeg" alt="">
         <li>Banaff</li>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum corrupti iste rerum veritatis. Ut dolor rem, optio facere earum molestiae exercitationem. Quo cupiditate repudiandae possimus ratione minus aliquid labore commodi!</p>
